add focus on click function

--- a/scss/base/_accessibility.scss
+++ b/scss/base/_accessibility.scss
@@ -6,22 +6,22 @@ body:not(.tabbed) *:focus {
     outline: none !important;
 }
 
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-}
+// .sr-only {
+//     position: absolute;
+//     width: 1px;
+//     height: 1px;
+//     padding: 0;
+//     margin: -1px;
+//     overflow: hidden;
+//     clip: rect(0, 0, 0, 0);
+//     border: 0;
+// }
 
-.no-animation {
-    transition: none !important;
+// .no-animation {
+//     transition: none !important;
 
-    &::after,
-    &::before {
-        transition: none !important;
-    }
-}
+//     &::after,
+//     &::before {
+//         transition: none !important;
+//     }
+// }
