--- a/scss/base/_typogrophy.scss
+++ b/scss/base/_typogrophy.scss
@@ -89,13 +89,13 @@ a {
   cursor: pointer;
 }
 
-.blue-text {
-  color: $color-primary;
-}
+// .blue-text {
+//   color: $color-primary;
+// }
 
-.orange-text {
-  color: $color-secondary;
-}
+// .orange-text {
+//   color: $color-secondary;
+// }
 
 .text-green {
   color: $color-primary;
