--- a/scss/layout/main-page/_footer-section.scss
+++ b/scss/layout/main-page/_footer-section.scss
@@ -221,6 +221,12 @@
 
             &:focus+label {
                 color: white;
+                border-bottom: 1px solid $color-primary;
+            }
+
+            &:focus {
+                color: $color-primary;
+                border-bottom: 1px solid $color-primary;
             }
 
             &::placeholder {
@@ -284,7 +290,7 @@
     .divhidden {
         position: absolute;
         background: #000;
-        padding: 4.5rem 2rem;
+        padding: 6.2rem 2rem;
         width: calc(100% - 7rem);
         top: 15%;
         border: 1px solid white;
@@ -292,7 +298,7 @@
 
         @include respond(tab-port) {
             top: 10rem;
-            padding: 22.5rem 2rem;
+            padding: 31.5rem 2rem;
         }
 
         & p {
