--- a/scss/layout/main-page/_about-section.scss
+++ b/scss/layout/main-page/_about-section.scss
@@ -103,7 +103,7 @@
             }
         }
 
-        & a {
+        & div {
             display: block;
             transform: translate(-60%, 50%);
             width: 18rem;
