--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -65,7 +65,7 @@
 
     &-right {
         position: relative;
-        display: flex;
+        display: flex !important;
         align-content: center;
         justify-content: center;
         align-items: center;
