--- a/scss/layout/main-page/_advantage-section.scss
+++ b/scss/layout/main-page/_advantage-section.scss
@@ -47,7 +47,7 @@
         @include respond(tab-port) {
             font-size: 5rem;
             margin-block-end: 5rem;
-            line-height: 7rem;
+            //  line-height:7rem;
         }
     }
 
