--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -169,6 +169,12 @@
                 font-size: 3rem;
                 line-height: inherit;
             }
+
+            & * {
+                cursor: pointer;
+            }
+
+
         }
     }
 }
