--- a/scss/base/_typogrophy.scss
+++ b/scss/base/_typogrophy.scss
@@ -12,12 +12,11 @@
 
 }
 
-@font-face {
-  font-family: 'rubik';
-  src: url(../fonts/Rubik/Rubik-Medium.ttf);
-  font-display: swap;
-
-}
+// @font-face {
+//   font-family: 'rubik';
+//   src: url(../fonts/Rubik/Rubik-Medium.ttf);
+//   font-display: swap;
+// }
 
 @font-face {
   font-family: 'rubikRegular';
