--- a/scss/base/_typogrophy.scss
+++ b/scss/base/_typogrophy.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'rubikLight';
-  src: url(../fonts/Rubik/Rubik-Light.ttf);
+  src: url('https://amitashdot.github.io/ifaat-new/fonts/Rubik/Rubik-Light.ttf');
   font-display: swap;
 
 }
 
 @font-face {
   font-family: 'rubikBold';
-  src: url(../fonts/Rubik/Rubik-Bold.ttf);
+  src: url('https://amitashdot.github.io/ifaat-new/fonts/Rubik/Rubik-Bold.ttf');
   font-display: swap;
 
 }
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: 'rubikRegular';
-  src: url(../fonts/Rubik/Rubik-Regular.ttf);
+  src: url('https://amitashdot.github.io/ifaat-new/fonts/Rubik/Rubik-Regular.ttf');
   font-display: swap;
 
 }
