--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -234,6 +234,7 @@
         left: 0rem;
         transform: translate(150%, 0%);
         z-index: 5;
+        width: 2.2rem;
 
         // border: solid 1px red;
         @include respond(tab-port) {
@@ -246,6 +247,7 @@
 
         & img {
             width: inherit;
+            height: inherit;
         }
     }
 }
