--- a/scss/layout/main-page/_footer-section.scss
+++ b/scss/layout/main-page/_footer-section.scss
@@ -100,24 +100,24 @@
 
     @include respond(tab-port) {
         display: flex !important;
-        width: 24rem;
-        height: 24rem;
-        right: 12rem;
-        top: 15rem;
+        width: 27rem;
+        height: 27rem;
+        right: 15rem;
+        top: 13rem;
         padding-inline: 2rem;
         text-align: center;
-        z-index: -1;
+        z-index: 0;
 
     }
 
     &-percentage {
-        font-family: 'rubik', sans-serif;
+        font-family: 'rubikBold', sans-serif;
         font-size: 1.5rem;
         line-height: 1.5rem;
 
         @include respond(tab-port) {
-            font-size: 4rem;
-            line-height: 4rem;
+            font-size: 5rem;
+            line-height: 5rem;
         }
     }
 
@@ -128,8 +128,8 @@
         font-weight: 100;
 
         @include respond(tab-port) {
-            font-size: 3rem;
-            line-height: 3rem;
+            font-size: 3.5rem;
+            line-height: 3.5rem;
         }
     }
 }
