--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -98,17 +98,22 @@
                 width: 142%;
                 height: auto;
                 position: absolute;
-                top: -9%;
+                top: -10%;
                 right: -12%;
-                max-width: 631px;
+                // max-width: 631px;
 
                 @include respond(tab-port) {
-                    width: 77%;
+                    // width: 77%;
+                    // height: auto;
+                    // position: absolute;
+                    // top: 29rem;
+                    // right: -25rem;
+                    width: 72%;
                     height: auto;
                     position: absolute;
-                    top: 29rem;
-                    right: -25rem;
-                    z-index: -1;
+                    top: 30rem;
+                    right: -20rem;
+                    z-index: 0;
                 }
             }
         }
@@ -126,7 +131,7 @@
         width: 60%;
 
         @include respond(tab-port) {
-            gap: 1rem;
+            // gap: 1rem;
             width: 60rem;
             margin-inline-start: 33rem;
         }
