--- a/scss/base/_typogrophy.scss
+++ b/scss/base/_typogrophy.scss
@@ -113,3 +113,15 @@ a {
   background: $color-black;
   width: 100%;
 }
+
+.border {
+  &-bottom {
+    &-secondary {
+      border-bottom: 1px solid $color-secondary;
+    }
+  }
+}
+
+.bold {
+  font-family: 'rubikBold', sans-serif;
+}
