--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -8,6 +8,28 @@
   }
 }
 
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0)
+  }
+
+  25% {
+    transform: translateX(2rem)
+  }
+
+  50% {
+    transform: translateX(-2rem)
+  }
+
+  75% {
+    transform: translateX(2rem)
+  }
+
+  100% {
+    transform: translateX(0)
+  }
+}
+
 // @keyframes fadeOut {
 //   0% {
 //     opacity: 1;
