--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -164,6 +164,14 @@
             gap: 0.2rem;
             align-items: center;
             justify-content: center;
+            border: 1px solid;
+            transition: all 0.3s;
+
+            &:hover {
+                color: $color-primary;
+                background-color: $color-white;
+                border: 1px solid;
+            }
 
             @include respond(tab-port) {
                 font-size: 3rem;
@@ -191,6 +199,7 @@
         background: #fff;
         min-height: 13rem;
         justify-content: space-between;
+        transition: 0.25s all;
 
         @include respond(tab-port) {
             padding: 2rem;
@@ -200,7 +209,15 @@
             justify-content: center;
             justify-content: space-between;
             // padding-inline-start: 5rem;
+
+            // &:hover {
+            //     transform: none;
+            // }
         }
+
+        // &:hover {
+        //     transform: scale(1.05);
+        // }
     }
 
     &-track {
