--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -21,14 +21,14 @@
   }
 }
 
-.show-on-scroll {
-  opacity: 0;
-  transform: translateY(50%);
-  transition: all 0.5s;
-  will-change: transform opacity;
-}
+// .show-on-scroll {
+//   opacity: 0;
+//   transform: translateY(50%);
+//   transition: all 0.5s;
+//   will-change: transform opacity;
+// }
 
-.is-visible {
-  opacity: 1;
-  transform: translateY(0%);
-}
+// .is-visible {
+//   opacity: 1;
+//   transform: translateY(0%);
+// }
